[package]
name = "godcoin"
version = "0.0.1"
authors = ["Samuel Grenier <samrg472@gmail.com>"]

[lib]
name = "godcoin"
path = "src/godcoin/lib.rs"

[[bin]]
name = "godcoin"
test = false
doc = false

[dependencies]
bs58 = "0.2.1"
bytes = "0.4.9"
crc32c = "0.4.0"
dirs = "1.0.3"
num-bigint = "0.2.0"
num-traits = "0.2.5"
rocksdb = "0.10.1"
sodiumoxide = { version = "0.1.0", default-features = false, features = ["std"] }
tokio = "0.1.7"
tokio-codec = "0.1.0"

[dependencies.clap]
version = "2.32.0"
default-features = false

[dev-dependencies]
rand = "0.5.5"
