[package]
name = "godcoin-cli"
version = "0.0.1"
authors = ["Samuel Grenier <samrg472@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "2.0.2"
env_logger = "0.6.2"
faster-hex = "0.3.1"
godcoin = { path = "../godcoin" }
log = "0.4.8"
rustyline = "5.0.1"
rocksdb = "0.12.3"
sodiumoxide = { version = "0.2.2", default-features = false, features = ["std"] }
url = "2.1.0"

[dependencies.clap]
version = "2.33.0"
default-features = false

[dependencies.tungstenite]
version = "0.9.1"
default-features = false
