[package]
name = "godcoin-cli"
version = "0.0.1"
authors = ["Samuel Grenier <samrg472@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "2.0.2"
env_logger = "0.7.1"
faster-hex = "0.4.1"
godcoin = { path = "../godcoin" }
log = "0.4.8"
native-tls = "0.2.3"
rustyline = "5.0.4"
rocksdb = "0.12.4"
sodiumoxide = { version = "0.2.5", default-features = false, features = ["std"] }
url = "2.1.0"

[dependencies.clap]
version = "2.33.0"
default-features = false

[dependencies.tungstenite]
version = "0.9.1"
default-features = false
