[package]
name = "godcoin-cli"
version = "0.3.0"
edition = "2018"
authors = ["Samuel Grenier <samrg472@gmail.com>"]
license = "MIT"
repository = "https://github.com/GODcoin/godcoin"
readme = "README.md"
homepage = "https://godcoin.gold"
description = """
GODcoin core command-line interface with a wallet and other utilities.
"""

publish = false

[[bin]]
name = "godcoin"
path = "src/main.rs"

[features]
default = []
testnet = ["godcoin/testnet"]

[dependencies]
dirs = "2.0.2"
env_logger = "0.7.1"
faster-hex = "0.4.1"
godcoin = { path = "../godcoin" }
log = "0.4.8"
native-tls = "0.2.4"
rustyline = "6.1.2"
rocksdb = "0.14.0"
sodiumoxide = { version = "0.2.5", default-features = false, features = ["std"] }
url = "2.1.1"

[dependencies.clap]
version = "2.33.0"
default-features = false

[dependencies.tungstenite]
version = "0.10.1"
default-features = false
