[package]
name = "godcoin-cli"
version = "0.0.1"
authors = ["Samuel Grenier <samrg472@gmail.com>"]
edition = "2018"

[dependencies]
ctrlc = "3.1.1"
dirs = "1.0.4"
env_logger = "0.6.0"
godcoin = { path = "../godcoin" }
log = "0.4.6"
tokio = "0.1.15"

[dependencies.clap]
version = "2.32.0"
default-features = false
