[package]
name = "godcoin"
version = "0.3.0"
edition = "2018"
authors = ["Samuel Grenier <samrg472@gmail.com>"]
license = "MIT"
repository = "https://github.com/GODcoin/godcoin"
readme = "README.md"
homepage = "https://godcoin.gold"
description = """
GODcoin core blockchain library.
"""

[features]
default = []
testnet = []

[dependencies]
bs58 = "0.3.0"
bytes = "0.5.4"
crc32c = "0.4.0"
faster-hex = "0.4.1"
log = "0.4.8"
num-bigint = "0.2.6"
num-traits = "0.2.11"
parking_lot = "0.10.0"
rocksdb = "0.13.0"
sodiumoxide = { version = "0.2.5", default-features = false, features = ["std"] }
