[package]
name = "godcoin"
version = "0.3.0"
edition = "2018"
authors = ["Samuel Grenier <samrg472@gmail.com>"]
license = "MIT"
repository = "https://github.com/GODcoin/godcoin"
readme = "README.md"
homepage = "https://godcoin.gold"
description = """
GODcoin core blockchain library.
"""

[features]
default = []
testnet = []

[dependencies]
bs58 = "0.3.1"
bytes = "0.5.6"
crc32c = "0.5.0"
faster-hex = "0.4.1"
num-bigint = "0.3.0"
num-traits = "0.2.12"
parking_lot = "0.11.0"
rocksdb = "0.14.0"
sodiumoxide = { version = "0.2.6", default-features = false, features = ["std"] }
tracing = "0.1.18"
