[package]
name = "godcoin-p2p"
version = "0.1.0"
authors = ["samrg472 <samrg472@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
log = "0.4.6"
sodiumoxide = { version = "0.2.1", default-features = false, features = ["std"] }
tokio = "0.1.16"

[dependencies.actix]
version = "0.7.9"
default-features = false
