[package]
name = "godcoin-server"
version = "0.3.0"
edition = "2018"
authors = ["Samuel Grenier <samrg472@gmail.com>"]
license = "MIT"
repository = "https://github.com/GODcoin/godcoin"
readme = "README.md"
homepage = "https://godcoin.gold"
description = """
GODcoin core server daemon.
"""

publish = false

[features]
default = []
testnet = ["godcoin/testnet"]

[dependencies]
dirs = "2.0.2"
env_logger = "0.7.1"
futures = "0.3.4"
godcoin = { path = "../godcoin" }
log = "0.4.8"
parking_lot = "0.10.2"
toml = "0.5.6"

[dependencies.clap]
version = "2.33.0"
default-features = false

[dependencies.serde]
version = "1.0.106"
default-features = false
features = ["derive"]

[dependencies.tokio]
version = "0.2.18"
default-features = false
features = ["macros", "tcp", "time", "rt-threaded", "signal", "stream"]

[dependencies.tokio-tungstenite]
version = "0.10.1"
default-features = false

[dev-dependencies]
sodiumoxide = { version = "0.2.5", default-features = false, features = ["std"] }
godcoin = { path = "../godcoin", features = ["testnet"] }

[lib]
name = "godcoin_server"
path = "src/server/lib.rs"
doctest = false

[[bin]]
name = "godcoin-server"
path = "src/bin/server/main.rs"
test = false
doc = false
