[package]
name = "godcoin-simulation"
version = "0.1.0"
authors = ["samrg472 <samrg472@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.11"
crossbeam-channel = "0.3.8"
env_logger = "0.6.0"
godcoin-p2p = { path = "../p2p" }
log = "0.4.6"
tokio = "0.1.15"

[dependencies.actix]
version = "0.7.9"
default-features = false
features = ["signal"]
