[package]
name = "godcoin-simulation"
version = "0.1.0"
authors = ["samrg472 <samrg472@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
env_logger = "0.6.1"
futures = "0.1.25"
godcoin-p2p = { path = "../p2p" }
log = "0.4.6"
tokio = "0.1.16"

[dependencies.actix]
version = "0.7.9"
default-features = false
features = ["signal"]
